# aiaudiovisualizer

./: .gitignore  CMakeLists.txt  README.md
AIAudioVisualizer/: AIAudioVisualizer.cpp  AIAudioVisualizer.h  CMakeLists.txt  VkBootstrap.cpp  VkBootstrap.h  VkBootstrapDispatch.h  imgui.h  imgui_ai.h  imgui_demo.cpp  portAudioStructs.h  scope_guard.hpp  tiny_obj_loader.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h
AIAudioVisualizer/cppflow/: tensor.h
AIAudioVisualizer/shaders/: audiovis.frag  offtexture.frag  tri_mesh_ssbo.vert
